# Hestia

./: .dockerignore  .gitignore  CHANGELOG.md  DEV_ENVIRONMENT.md  Dockerfile  README.md  TODO.md  docker-compose-tailscale.yml  docker-compose.dev.yml  docker-compose.yml  hestia_config.yml  pyproject.toml  pytest.ini  run.ps1  run.sh
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
config/: default_hestia_config.yml
docs/: configuration-reference.md  semaphore-integration.md  troubleshooting.md
scripts/: dev-env.sh  dev.sh
specs/001-hestia-a-personal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/hestia/: app.py  config.py  db.py  logging.py  metrics.py  middleware.py  persistence.py  request_queue.py  schemas.py  semaphore_client.py  strategies.py  strategy_loader.py
strategies/: README.md  custom_routing.py  health_checker.py  load_balancer.py  mock_router.py  model_router.py  template.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_db.py  test_integration.py  test_strategies.py
tests/contract/: test_contract_endpoints.py  test_contract_semaphore.py
tests/documentation/: test_quickstart_examples.py
tests/integration/: test_dispatcher.py  test_health_failover.py  test_idle_shutdown.py  test_readiness.py  test_semaphore_shutdown.py  test_semaphore_startup.py  test_service_management.py  test_startup_policy.py  test_strategy_routing.py  test_transparent_proxy.py
tests/unit/: test_config_loader.py  test_logging_metrics.py  test_models.py  test_persistence.py  (+2 more)
(+9 files in other folders)
