[project]
name = "hestia"
version = "0.1.0"
description = "Hestia - Personal On-Demand Service Gateway"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Hestia"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.32",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "black>=24.8.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[project.scripts]
hestia-api = "hestia.app:run"

[tool.uv]
index-url = "https://pypi.org/simple"
